force-app/main/default/objects/Contract/fields/Active_in_Current_Term__c.field-meta.xml
<CustomField>
    <fullName>Active_in_Current_Term__c</fullName>
    <formula>IF(
OR(
ISPICKVAL( Status , &quot;Activated&quot;),
AND(EndDate &gt;= TODAY(),StartDate &lt;= TODAY())
),TRUE,FALSE)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Active in Current Term?</label>
    <type>Checkbox</type>
</CustomField>