force-app/main/default/objects/Contract/fields/Auto_Renewal_Highlight__c.field-meta.xml
<CustomField>
    <fullName>Auto_Renewal_Highlight__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Auto Renewal Highlight</label>
    <type>Checkbox</type>
</CustomField>