force-app/main/default/objects/Contract/fields/Bundle_Has_Been_Created__c.field-meta.xml
<CustomField>
    <fullName>Bundle_Has_Been_Created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Bundle Has Been Created</label>
    <type>Checkbox</type>
</CustomField>