force-app/main/default/objects/Contract/fields/Closed_Won_Date__c.field-meta.xml
<CustomField>
    <fullName>Closed_Won_Date__c</fullName>
    <formula>IF(ISPICKVAL(Opportunity__r.StageName, &quot;Closed Won&quot;),
 Opportunity__r.Stage_Change_Date__c,NULL)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Closed/Won Date</label>
    <type>Date</type>
</CustomField>