force-app/main/default/objects/Contract/fields/Contract_Has_Been_Migrated__c.field-meta.xml
<CustomField>
    <fullName>Contract_Has_Been_Migrated__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Contract Has Been Migrated</label>
    <type>Checkbox</type>
</CustomField>