force-app/main/default/objects/Contract/fields/Contract_Has_Legacy_Product__c.field-meta.xml
<CustomField>
    <fullName>Contract_Has_Legacy_Product__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set to TRUE when the Contract contains a legacy Product which has been converted to Usage.</description>
    <label>Contract Has Legacy Product</label>
    <type>Checkbox</type>
</CustomField>