force-app/main/default/objects/Contract/fields/Contract_ID_18_Character__c.field-meta.xml
<CustomField>
    <fullName>Contract_ID_18_Character__c</fullName>
    <formula>CASESAFEID(Id)</formula>
    <label>Contract ID (18 Character)</label>
    <type>Text</type>
</CustomField>