force-app/main/default/objects/Contract/fields/Contracts_to_Migrate__c.field-meta.xml
<CustomField>
    <fullName>Contracts_to_Migrate__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Set this field to TRUE when the contract must be migrated.</description>
    <inlineHelpText>Set this field to TRUE when the contract must be migrated.</inlineHelpText>
    <label>Contracts to Migrate</label>
    <type>Checkbox</type>
</CustomField>