force-app/main/default/objects/Contract/fields/Current_Base_Plan__c.field-meta.xml
<CustomField>
    <fullName>Current_Base_Plan__c</fullName>
    <label>Current Base Plan</label>
    <type>TextArea</type>
</CustomField>