force-app/main/default/objects/Contract/fields/Days_Between_Contracts__c.field-meta.xml
<CustomField>
    <fullName>Days_Between_Contracts__c</fullName>
    <description>Created for RR-1981. Field is populated by the &quot;Contract - Populate Days Between Contracts Field&quot; flow. Used in reporting only, do not include on layouts. Give end users view only access.</description>
    <label>Days Between Contracts</label>
    <length>255</length>
    <type>Text</type>
</CustomField>