force-app/main/default/objects/Contract/fields/Delaware__c.field-meta.xml
<CustomField>
    <fullName>Delaware__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Delaware</label>
    <type>Checkbox</type>
</CustomField>