force-app/main/default/objects/Contract/fields/Discount__c.field-meta.xml
<CustomField>
    <fullName>Discount__c</fullName>
    <formula>Opportunity__r.SyncedQuote.Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount%</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>