force-app/main/default/objects/Contract/fields/Discount_Total__c.field-meta.xml
<CustomField>
    <fullName>Discount_Total__c</fullName>
    <formula>Opportunity__r.SyncedQuote.Discount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discount Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>