force-app/main/default/objects/Contract/fields/ExpirationDate__c.field-meta.xml
<CustomField>
    <fullName>ExpirationDate__c</fullName>
    <description>Contract end date for use in time-based workflows.</description>
    <formula>EndDate</formula>
    <inlineHelpText>Contract end date for use in time-based workflows.</inlineHelpText>
    <label>Expiration Date</label>
    <type>Date</type>
</CustomField>