force-app/main/default/objects/Contract/fields/Has_Overages__c.field-meta.xml
<CustomField>
    <fullName>Has_Overages__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Has Overages</label>
    <type>Checkbox</type>
</CustomField>