force-app/main/default/objects/Contract/fields/Integration_Error_NEW__c.field-meta.xml
<CustomField>
    <fullName>Integration_Error_NEW__c</fullName>
    <label>Integration Error - NEW</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>