force-app/main/default/objects/Contract/fields/Integration_Last_Updated__c.field-meta.xml
<CustomField>
    <fullName>Integration_Last_Updated__c</fullName>
    <label>Integration Last Updated</label>
    <type>DateTime</type>
</CustomField>