force-app/main/default/objects/Contract/fields/Integration_Status_NEW__c.field-meta.xml
<CustomField>
    <fullName>Integration_Status_NEW__c</fullName>
    <label>Integration Status - NEW</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Queued</fullName>
            </value>
            <value>
                <fullName>Success</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>