force-app/main/default/objects/Contract/fields/ISV_Partner_Source__c.field-meta.xml
<CustomField>
    <fullName>ISV_Partner_Source__c</fullName>
    <label>ISV Partner Source</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Malwarebytes</fullName>
            </value>
            <value>
                <fullName>Perimeter81</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>