force-app/main/default/objects/Contract/fields/Netsuite_Contract_Id_NEW__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Contract_Id_NEW__c</fullName>
    <label>Netsuite Contract Id - NEW</label>
    <length>20</length>
    <type>Text</type>
</CustomField>