force-app/main/default/objects/Contract/fields/Netsuite_Force_Migrate_NS2__c.field-meta.xml
<CustomField>
    <fullName>Netsuite_Force_Migrate_NS2__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Netsuite Force Migrate NS2</label>
    <type>Checkbox</type>
</CustomField>