force-app/main/default/objects/Contract/fields/No_Auto_Renew__c.field-meta.xml
<CustomField>
    <fullName>No_Auto_Renew__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Auto Renew</label>
    <type>Checkbox</type>
</CustomField>