force-app/main/default/objects/Contract/fields/No_Name_Drop__c.field-meta.xml
<CustomField>
    <fullName>No_Name_Drop__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Name Drop</label>
    <type>Checkbox</type>
</CustomField>