force-app/main/default/objects/Contract/fields/Old_Billing_Date_of_Month__c.field-meta.xml
<CustomField>
    <fullName>Old_Billing_Date_of_Month__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Used to match Billinbg date of the month for Ammend</description>
    <inlineHelpText>Used to match Billing date of the month for Ammend</inlineHelpText>
    <label>Old Billing Date of Month</label>
    <type>Checkbox</type>
</CustomField>