force-app/main/default/objects/Contract/fields/Only_Contract_On_Account__c.field-meta.xml
<CustomField>
    <fullName>Only_Contract_On_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Only Contract On Account</label>
    <type>Checkbox</type>
</CustomField>