force-app/main/default/objects/Contract/fields/Original_Base_Plan__c.field-meta.xml
<CustomField>
    <fullName>Original_Base_Plan__c</fullName>
    <label>Original Base Plan</label>
    <type>TextArea</type>
</CustomField>