force-app/main/default/objects/Contract/fields/Original_Contract_ARR__c.field-meta.xml
<CustomField>
    <fullName>Original_Contract_ARR__c</fullName>
    <label>Original Contract ARR</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>