force-app/main/default/objects/Contract/fields/Please_See_Attached__c.field-meta.xml
<CustomField>
    <fullName>Please_See_Attached__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Please See Attached</label>
    <type>Checkbox</type>
</CustomField>