force-app/main/default/objects/Contract/fields/Previous_Plan__c.field-meta.xml
<CustomField>
    <fullName>Previous_Plan__c</fullName>
    <label>Previous Plan</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric Core</fullName>
            </value>
            <value>
                <fullName>Electric Basic</fullName>
            </value>
            <value>
                <fullName>Electric Lite</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>