force-app/main/default/objects/Contract/fields/Price_Increase_Upon_Renewal_Cap__c.field-meta.xml
<CustomField>
    <fullName>Price_Increase_Upon_Renewal_Cap__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Price Increase Upon Renewal Cap</label>
    <type>Checkbox</type>
</CustomField>