force-app/main/default/objects/Contract/fields/Prior_Contract_Gross_Profit__c.field-meta.xml
<CustomField>
    <fullName>Prior_Contract_Gross_Profit__c</fullName>
    <label>Prior Contract Gross Profit</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>