force-app/main/default/objects/Contract/fields/Prior_Contract_Selling_Price__c.field-meta.xml
<CustomField>
    <fullName>Prior_Contract_Selling_Price__c</fullName>
    <label>Prior Contract Selling Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>