force-app/main/default/objects/Contract/fields/Selling_Price_Net__c.field-meta.xml
<CustomField>
    <fullName>Selling_Price_Net__c</fullName>
    <formula>Opportunity__r.Amount</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Selling Price, Net</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>