force-app/main/default/objects/Contract/fields/Service_Provider_Editable__c.field-meta.xml
<CustomField>
    <fullName>Service_Provider_Editable__c</fullName>
    <label>Service Provider Editable</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Electric AI</fullName>
            </value>
            <value>
                <fullName>Sinu</fullName>
            </value>
            <value>
                <fullName>Techvera</fullName>
            </value>
            <value>
                <fullName>Contango</fullName>
            </value>
            <value>
                <fullName>Legacy Techvera</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>