force-app/main/default/objects/Contract/fields/Standard_MSA__c.field-meta.xml
<CustomField>
    <fullName>Standard_MSA__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Standard MSA</label>
    <type>Checkbox</type>
</CustomField>