force-app/main/default/objects/Contract/fields/Yes_Case_Study__c.field-meta.xml
<CustomField>
    <fullName>Yes_Case_Study__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Yes Case Study</label>
    <type>Checkbox</type>
</CustomField>